src/objects/ProposedProjects__x.object
<CustomObject>
    <description>ProposedProjects</description>
    <externalDataSource>WIP_POC</externalDataSource>
    <externalName>ProposedProjects</externalName>
    <fields>
        <fullName>ACTUAL_END_DATE__c</fullName>
        <description>ACTUAL_END_DATE</description>
        <externalDeveloperName>ACTUAL_END_DATE</externalDeveloperName>
        <label>ACTUAL_END_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADDITIONAL_FUNDING_NEEDED_TYPE_ID__c</fullName>
        <description>ADDITIONAL_FUNDING_NEEDED_TYPE_ID</description>
        <externalDeveloperName>ADDITIONAL_FUNDING_NEEDED_TYPE_ID</externalDeveloperName>
        <label>ADDITIONAL_FUNDING_NEEDED_TYPE_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDITIONAL_FUNDING_NEEDED__c</fullName>
        <description>ADDITIONAL_FUNDING_NEEDED</description>
        <externalDeveloperName>ADDITIONAL_FUNDING_NEEDED</externalDeveloperName>
        <label>ADDITIONAL_FUNDING_NEEDED</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGREED_VARIANCE_AMOUNT__c</fullName>
        <description>AGREED_VARIANCE_AMOUNT</description>
        <externalDeveloperName>AGREED_VARIANCE_AMOUNT</externalDeveloperName>
        <label>AGREED_VARIANCE_AMOUNT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGREED_VARIANCE_COST_CENTER__c</fullName>
        <description>AGREED_VARIANCE_COST_CENTER</description>
        <externalDeveloperName>AGREED_VARIANCE_COST_CENTER</externalDeveloperName>
        <label>AGREED_VARIANCE_COST_CENTER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGREED_VARIANCE_DETAILS__c</fullName>
        <description>AGREED_VARIANCE_DETAILS</description>
        <externalDeveloperName>AGREED_VARIANCE_DETAILS</externalDeveloperName>
        <label>AGREED_VARIANCE_DETAILS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGREED_VARIANCE_OWNER_ID__c</fullName>
        <description>AGREED_VARIANCE_OWNER_ID</description>
        <externalDeveloperName>AGREED_VARIANCE_OWNER_ID</externalDeveloperName>
        <label>AGREED_VARIANCE_OWNER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGREED_VARIANCE_OWNER__c</fullName>
        <description>AGREED_VARIANCE_OWNER</description>
        <externalDeveloperName>AGREED_VARIANCE_OWNER</externalDeveloperName>
        <label>AGREED_VARIANCE_OWNER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVAL_GATE_CHK__c</fullName>
        <description>APPROVAL_GATE_CHK</description>
        <externalDeveloperName>APPROVAL_GATE_CHK</externalDeveloperName>
        <label>APPROVAL_GATE_CHK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVAL_GATE_TARGET_DATE__c</fullName>
        <description>APPROVAL_GATE_TARGET_DATE</description>
        <externalDeveloperName>APPROVAL_GATE_TARGET_DATE</externalDeveloperName>
        <label>APPROVAL_GATE_TARGET_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ARCHITECTURE_COMMENTS__c</fullName>
        <description>ARCHITECTURE_COMMENTS</description>
        <externalDeveloperName>ARCHITECTURE_COMMENTS</externalDeveloperName>
        <label>ARCHITECTURE_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARCHITECTURE_SUMMARY__c</fullName>
        <description>ARCHITECTURE_SUMMARY</description>
        <externalDeveloperName>ARCHITECTURE_SUMMARY</externalDeveloperName>
        <label>ARCHITECTURE_SUMMARY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ART_1_DATE__c</fullName>
        <description>ART_1_DATE</description>
        <externalDeveloperName>ART_1_DATE</externalDeveloperName>
        <label>ART_1_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ART_1_RESULTS_URI__c</fullName>
        <description>ART_1_RESULTS_URI</description>
        <externalDeveloperName>ART_1_RESULTS_URI</externalDeveloperName>
        <label>ART_1_RESULTS_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASELINE_DATE__c</fullName>
        <description>BASELINE_DATE</description>
        <externalDeveloperName>BASELINE_DATE</externalDeveloperName>
        <label>BASELINE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BASELINE_END__c</fullName>
        <description>BASELINE_END</description>
        <externalDeveloperName>BASELINE_END</externalDeveloperName>
        <label>BASELINE_END</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BUDGET_AGREEMENT__c</fullName>
        <description>BUDGET_AGREEMENT</description>
        <externalDeveloperName>BUDGET_AGREEMENT</externalDeveloperName>
        <label>BUDGET_AGREEMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_AREA_IMPACTED__c</fullName>
        <description>BUSINESS_AREA_IMPACTED</description>
        <externalDeveloperName>BUSINESS_AREA_IMPACTED</externalDeveloperName>
        <label>BUSINESS_AREA_IMPACTED</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPEX_AMOUNT__c</fullName>
        <description>CAPEX_AMOUNT</description>
        <externalDeveloperName>CAPEX_AMOUNT</externalDeveloperName>
        <label>CAPEX_AMOUNT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONFIDENTIAL_ITEM__c</fullName>
        <description>CONFIDENTIAL_ITEM</description>
        <externalDeveloperName>CONFIDENTIAL_ITEM</externalDeveloperName>
        <label>CONFIDENTIAL_ITEM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COST_IMPLICATIONS_COMMENT_CHART__c</fullName>
        <description>COST_IMPLICATIONS_COMMENT_CHART</description>
        <externalDeveloperName>COST_IMPLICATIONS_COMMENT_CHART</externalDeveloperName>
        <label>COST_IMPLICATIONS_COMMENT_CHART</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COST_IMPLICATIONS_COMMENT__c</fullName>
        <description>COST_IMPLICATIONS_COMMENT</description>
        <externalDeveloperName>COST_IMPLICATIONS_COMMENT</externalDeveloperName>
        <label>COST_IMPLICATIONS_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY_ID__c</fullName>
        <description>CREATED_BY_ID</description>
        <externalDeveloperName>CREATED_BY_ID</externalDeveloperName>
        <label>CREATED_BY_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>CREATED_BY</description>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>CREATED_BY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED__c</fullName>
        <description>CREATED</description>
        <externalDeveloperName>CREATED</externalDeveloperName>
        <label>CREATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRITICALITY_ID__c</fullName>
        <description>CRITICALITY_ID</description>
        <externalDeveloperName>CRITICALITY_ID</externalDeveloperName>
        <label>CRITICALITY_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRENT_STATE__c</fullName>
        <description>CURRENT_STATE</description>
        <externalDeveloperName>CURRENT_STATE</externalDeveloperName>
        <label>CURRENT_STATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATE_ENTERED__c</fullName>
        <description>DATE_ENTERED</description>
        <externalDeveloperName>DATE_ENTERED</externalDeveloperName>
        <label>DATE_ENTERED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DEPENDENCIES_COMMENT__c</fullName>
        <description>DEPENDENCIES_COMMENT</description>
        <externalDeveloperName>DEPENDENCIES_COMMENT</externalDeveloperName>
        <label>DEPENDENCIES_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESIRED_DELIVERY_DATE__c</fullName>
        <description>DESIRED_DELIVERY_DATE</description>
        <externalDeveloperName>DESIRED_DELIVERY_DATE</externalDeveloperName>
        <label>DESIRED_DELIVERY_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DEVELOPMENT_START_DATE__c</fullName>
        <description>DEVELOPMENT_START_DATE</description>
        <externalDeveloperName>DEVELOPMENT_START_DATE</externalDeveloperName>
        <label>DEVELOPMENT_START_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DIRECTED_PVAP__c</fullName>
        <description>DIRECTED_PVAP</description>
        <externalDeveloperName>DIRECTED_PVAP</externalDeveloperName>
        <label>DIRECTED_PVAP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRA_COMMENTS__c</fullName>
        <description>DRA_COMMENTS</description>
        <externalDeveloperName>DRA_COMMENTS</externalDeveloperName>
        <label>DRA_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESTIMATED_FINISH_DATE__c</fullName>
        <description>ESTIMATED_FINISH_DATE</description>
        <externalDeveloperName>ESTIMATED_FINISH_DATE</externalDeveloperName>
        <label>ESTIMATED_FINISH_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXECUTION_RESOURCE_COMMENT__c</fullName>
        <description>EXECUTION_RESOURCE_COMMENT</description>
        <externalDeveloperName>EXECUTION_RESOURCE_COMMENT</externalDeveloperName>
        <label>EXECUTION_RESOURCE_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPANSION_10__c</fullName>
        <description>EXPANSION_10</description>
        <externalDeveloperName>EXPANSION_10</externalDeveloperName>
        <label>EXPANSION_10</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPANSION_1_ID__c</fullName>
        <description>EXPANSION_1_ID</description>
        <externalDeveloperName>EXPANSION_1_ID</externalDeveloperName>
        <label>EXPANSION_1_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPANSION_2__c</fullName>
        <description>EXPANSION_2</description>
        <externalDeveloperName>EXPANSION_2</externalDeveloperName>
        <label>EXPANSION_2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPANSION_3__c</fullName>
        <description>EXPANSION_3</description>
        <externalDeveloperName>EXPANSION_3</externalDeveloperName>
        <label>EXPANSION_3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPANSION_4_ID__c</fullName>
        <description>EXPANSION_4_ID</description>
        <externalDeveloperName>EXPANSION_4_ID</externalDeveloperName>
        <label>EXPANSION_4_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FORECAST_DATE__c</fullName>
        <description>FORECAST_DATE</description>
        <externalDeveloperName>FORECAST_DATE</externalDeveloperName>
        <label>FORECAST_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FORM_URI__c</fullName>
        <description>FORM_URI</description>
        <externalDeveloperName>FORM_URI</externalDeveloperName>
        <label>FORM_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUNDING_REQUIREMENT_DETAILS__c</fullName>
        <description>FUNDING_REQUIREMENT_DETAILS</description>
        <externalDeveloperName>FUNDING_REQUIREMENT_DETAILS</externalDeveloperName>
        <label>FUNDING_REQUIREMENT_DETAILS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUNDING_REQUIREMENT_ID__c</fullName>
        <description>FUNDING_REQUIREMENT_ID</description>
        <externalDeveloperName>FUNDING_REQUIREMENT_ID</externalDeveloperName>
        <label>FUNDING_REQUIREMENT_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FUTURE_STATE__c</fullName>
        <description>FUTURE_STATE</description>
        <externalDeveloperName>FUTURE_STATE</externalDeveloperName>
        <label>FUTURE_STATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEALTH_DATE__c</fullName>
        <description>HEALTH_DATE</description>
        <externalDeveloperName>HEALTH_DATE</externalDeveloperName>
        <label>HEALTH_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HEALTH_SUMMARY__c</fullName>
        <description>HEALTH_SUMMARY</description>
        <externalDeveloperName>HEALTH_SUMMARY</externalDeveloperName>
        <label>HEALTH_SUMMARY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGH_INVESTMENT__c</fullName>
        <description>HIGH_INVESTMENT</description>
        <externalDeveloperName>HIGH_INVESTMENT</externalDeveloperName>
        <label>HIGH_INVESTMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGH_VALUE__c</fullName>
        <description>HIGH_VALUE</description>
        <externalDeveloperName>HIGH_VALUE</externalDeveloperName>
        <label>HIGH_VALUE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPACTED_REGION_ID__c</fullName>
        <description>IMPACTED_REGION_ID</description>
        <externalDeveloperName>IMPACTED_REGION_ID</externalDeveloperName>
        <label>IMPACTED_REGION_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRB_DATE__c</fullName>
        <description>IRB_DATE</description>
        <externalDeveloperName>IRB_DATE</externalDeveloperName>
        <label>IRB_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITEM_TYPE__c</fullName>
        <description>ITEM_TYPE</description>
        <externalDeveloperName>ITEM_TYPE</externalDeveloperName>
        <label>ITEM_TYPE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_DELIVERY_GROUP_ID__c</fullName>
        <description>IT_DELIVERY_GROUP_ID</description>
        <externalDeveloperName>IT_DELIVERY_GROUP_ID</externalDeveloperName>
        <label>IT_DELIVERY_GROUP_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_DELIVERY_OWNER_ID__c</fullName>
        <description>IT_DELIVERY_OWNER_ID</description>
        <externalDeveloperName>IT_DELIVERY_OWNER_ID</externalDeveloperName>
        <label>IT_DELIVERY_OWNER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_DELIVERY_OWNER__c</fullName>
        <description>IT_DELIVERY_OWNER</description>
        <externalDeveloperName>IT_DELIVERY_OWNER</externalDeveloperName>
        <label>IT_DELIVERY_OWNER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_DELIVERY_PRIMARY_GROUP_ID__c</fullName>
        <description>IT_DELIVERY_PRIMARY_GROUP_ID</description>
        <externalDeveloperName>IT_DELIVERY_PRIMARY_GROUP_ID</externalDeveloperName>
        <label>IT_DELIVERY_PRIMARY_GROUP_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_SOLUTION__c</fullName>
        <description>IT_SOLUTION</description>
        <externalDeveloperName>IT_SOLUTION</externalDeveloperName>
        <label>IT_SOLUTION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED__c</fullName>
        <description>LAST_UPDATED</description>
        <externalDeveloperName>LAST_UPDATED</externalDeveloperName>
        <label>LAST_UPDATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATER_ID__c</fullName>
        <description>LAST_UPDATER_ID</description>
        <externalDeveloperName>LAST_UPDATER_ID</externalDeveloperName>
        <label>LAST_UPDATER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATER__c</fullName>
        <description>LAST_UPDATER</description>
        <externalDeveloperName>LAST_UPDATER</externalDeveloperName>
        <label>LAST_UPDATER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSEF_STAGE_ID__c</fullName>
        <description>LSEF_STAGE_ID</description>
        <externalDeveloperName>LSEF_STAGE_ID</externalDeveloperName>
        <label>LSEF_STAGE_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MANAGEMENT_REPORTING_LEVEL_ID__c</fullName>
        <description>MANAGEMENT_REPORTING_LEVEL_ID</description>
        <externalDeveloperName>MANAGEMENT_REPORTING_LEVEL_ID</externalDeveloperName>
        <label>MANAGEMENT_REPORTING_LEVEL_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>METHODOLOGY_ID__c</fullName>
        <description>METHODOLOGY_ID</description>
        <externalDeveloperName>METHODOLOGY_ID</externalDeveloperName>
        <label>METHODOLOGY_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NETWORK_BUILD_COMMENTS__c</fullName>
        <description>NETWORK_BUILD_COMMENTS</description>
        <externalDeveloperName>NETWORK_BUILD_COMMENTS</externalDeveloperName>
        <label>NETWORK_BUILD_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NETWORK_BUILD_COMPLETE__c</fullName>
        <description>NETWORK_BUILD_COMPLETE</description>
        <externalDeveloperName>NETWORK_BUILD_COMPLETE</externalDeveloperName>
        <label>NETWORK_BUILD_COMPLETE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NETWORK_BUILD_DATE__c</fullName>
        <description>NETWORK_BUILD_DATE</description>
        <externalDeveloperName>NETWORK_BUILD_DATE</externalDeveloperName>
        <label>NETWORK_BUILD_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OPEX_AMOUNT__c</fullName>
        <description>OPEX_AMOUNT</description>
        <externalDeveloperName>OPEX_AMOUNT</externalDeveloperName>
        <label>OPEX_AMOUNT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORIGINATING_BUSINESS_UNIT_ID__c</fullName>
        <description>ORIGINATING_BUSINESS_UNIT_ID</description>
        <externalDeveloperName>ORIGINATING_BUSINESS_UNIT_ID</externalDeveloperName>
        <label>ORIGINATING_BUSINESS_UNIT_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORIGINATING_COUNTRY__c</fullName>
        <description>ORIGINATING_COUNTRY</description>
        <externalDeveloperName>ORIGINATING_COUNTRY</externalDeveloperName>
        <label>ORIGINATING_COUNTRY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORIGINATING_REGION_ID__c</fullName>
        <description>ORIGINATING_REGION_ID</description>
        <externalDeveloperName>ORIGINATING_REGION_ID</externalDeveloperName>
        <label>ORIGINATING_REGION_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORIGINATING_SUB_BUSINESS_ID__c</fullName>
        <description>ORIGINATING_SUB_BUSINESS_ID</description>
        <externalDeveloperName>ORIGINATING_SUB_BUSINESS_ID</externalDeveloperName>
        <label>ORIGINATING_SUB_BUSINESS_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OWNING_COUNTRY__c</fullName>
        <description>OWNING_COUNTRY</description>
        <externalDeveloperName>OWNING_COUNTRY</externalDeveloperName>
        <label>OWNING_COUNTRY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_IT_LEADER_ID__c</fullName>
        <description>OWNING_IT_LEADER_ID</description>
        <externalDeveloperName>OWNING_IT_LEADER_ID</externalDeveloperName>
        <label>OWNING_IT_LEADER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_IT_LEADER__c</fullName>
        <description>OWNING_IT_LEADER</description>
        <externalDeveloperName>OWNING_IT_LEADER</externalDeveloperName>
        <label>OWNING_IT_LEADER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_POC_ID__c</fullName>
        <description>OWNING_POC_ID</description>
        <externalDeveloperName>OWNING_POC_ID</externalDeveloperName>
        <label>OWNING_POC_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_POINT_OF_CONTACT__c</fullName>
        <description>OWNING_POINT_OF_CONTACT</description>
        <externalDeveloperName>OWNING_POINT_OF_CONTACT</externalDeveloperName>
        <label>OWNING_POINT_OF_CONTACT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_REGION__c</fullName>
        <description>OWNING_REGION</description>
        <externalDeveloperName>OWNING_REGION</externalDeveloperName>
        <label>OWNING_REGION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_SUB_AREA__c</fullName>
        <description>OWNING_SUB_AREA</description>
        <externalDeveloperName>OWNING_SUB_AREA</externalDeveloperName>
        <label>OWNING_SUB_AREA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWNING_UNIT__c</fullName>
        <description>OWNING_UNIT</description>
        <externalDeveloperName>OWNING_UNIT</externalDeveloperName>
        <label>OWNING_UNIT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_ITEM_NAME__c</fullName>
        <description>PARENT_ITEM_NAME</description>
        <externalDeveloperName>PARENT_ITEM_NAME</externalDeveloperName>
        <label>PARENT_ITEM_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT__c</fullName>
        <description>PARENT</description>
        <externalDeveloperName>PARENT</externalDeveloperName>
        <label>PARENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_COMMENTS__c</fullName>
        <description>PAR_COMMENTS</description>
        <externalDeveloperName>PAR_COMMENTS</externalDeveloperName>
        <label>PAR_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_URI__c</fullName>
        <description>PIC_URI</description>
        <externalDeveloperName>PIC_URI</externalDeveloperName>
        <label>PIC_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_ID__c</fullName>
        <description>PP_ID</description>
        <externalDeveloperName>PP_ID</externalDeveloperName>
        <label>PP_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIMARY_ENTERPRISE_DRIVER_ID__c</fullName>
        <description>PRIMARY_ENTERPRISE_DRIVER_ID</description>
        <externalDeveloperName>PRIMARY_ENTERPRISE_DRIVER_ID</externalDeveloperName>
        <label>PRIMARY_ENTERPRISE_DRIVER_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIMARY_IT_DRIVER_ID__c</fullName>
        <description>PRIMARY_IT_DRIVER_ID</description>
        <externalDeveloperName>PRIMARY_IT_DRIVER_ID</externalDeveloperName>
        <label>PRIMARY_IT_DRIVER_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIMARY_STRATEGIC_DRIVER_ID__c</fullName>
        <description>PRIMARY_STRATEGIC_DRIVER_ID</description>
        <externalDeveloperName>PRIMARY_STRATEGIC_DRIVER_ID</externalDeveloperName>
        <label>PRIMARY_STRATEGIC_DRIVER_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROCUREMENT_COMMENTS__c</fullName>
        <description>PROCUREMENT_COMMENTS</description>
        <externalDeveloperName>PROCUREMENT_COMMENTS</externalDeveloperName>
        <label>PROCUREMENT_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJECT_HEALTH_ID__c</fullName>
        <description>PROJECT_HEALTH_ID</description>
        <externalDeveloperName>PROJECT_HEALTH_ID</externalDeveloperName>
        <label>PROJECT_HEALTH_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROJECT_IMPACTED_END_USER_ID__c</fullName>
        <description>PROJECT_IMPACTED_END_USER_ID</description>
        <externalDeveloperName>PROJECT_IMPACTED_END_USER_ID</externalDeveloperName>
        <label>PROJECT_IMPACTED_END_USER_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROJECT_MANAGER_ID__c</fullName>
        <description>PROJECT_MANAGER_ID</description>
        <externalDeveloperName>PROJECT_MANAGER_ID</externalDeveloperName>
        <label>PROJECT_MANAGER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJECT_MANAGER__c</fullName>
        <description>PROJECT_MANAGER</description>
        <externalDeveloperName>PROJECT_MANAGER</externalDeveloperName>
        <label>PROJECT_MANAGER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJECT_SITE_URI__c</fullName>
        <description>PROJECT_SITE_URI</description>
        <externalDeveloperName>PROJECT_SITE_URI</externalDeveloperName>
        <label>PROJECT_SITE_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROPOSE_STAGE_END_DATE__c</fullName>
        <description>PROPOSE_STAGE_END_DATE</description>
        <externalDeveloperName>PROPOSE_STAGE_END_DATE</externalDeveloperName>
        <label>PROPOSE_STAGE_END_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROPOSE_STAGE_START_DATE__c</fullName>
        <description>PROPOSE_STAGE_START_DATE</description>
        <externalDeveloperName>PROPOSE_STAGE_START_DATE</externalDeveloperName>
        <label>PROPOSE_STAGE_START_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRO_PP_ID__c</fullName>
        <description>PRO_PP_ID</description>
        <externalDeveloperName>PRO_PP_ID</externalDeveloperName>
        <label>PRO_PP_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVAP_URI__c</fullName>
        <description>PVAP_URI</description>
        <externalDeveloperName>PVAP_URI</externalDeveloperName>
        <label>PVAP_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>READY_FOR_APPROVAL_GATE__c</fullName>
        <description>READY_FOR_APPROVAL_GATE</description>
        <externalDeveloperName>READY_FOR_APPROVAL_GATE</externalDeveloperName>
        <label>READY_FOR_APPROVAL_GATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>READY_FOR_REGISTRATION_GATE_WF__c</fullName>
        <description>READY_FOR_REGISTRATION_GATE_WF</description>
        <externalDeveloperName>READY_FOR_REGISTRATION_GATE_WF</externalDeveloperName>
        <label>READY_FOR_REGISTRATION_GATE_WF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>READY_FOR_REGISTRATION_GATE__c</fullName>
        <description>READY_FOR_REGISTRATION_GATE</description>
        <externalDeveloperName>READY_FOR_REGISTRATION_GATE</externalDeveloperName>
        <label>READY_FOR_REGISTRATION_GATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>READY_FOR_SANCTION_GATE__c</fullName>
        <description>READY_FOR_SANCTION_GATE</description>
        <externalDeveloperName>READY_FOR_SANCTION_GATE</externalDeveloperName>
        <label>READY_FOR_SANCTION_GATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECOMMENDATION_COMMENT__c</fullName>
        <description>RECOMMENDATION_COMMENT</description>
        <externalDeveloperName>RECOMMENDATION_COMMENT</externalDeveloperName>
        <label>RECOMMENDATION_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_COMMENTS__c</fullName>
        <description>REGISTRATION_COMMENTS</description>
        <externalDeveloperName>REGISTRATION_COMMENTS</externalDeveloperName>
        <label>REGISTRATION_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_APPROVER_ID__c</fullName>
        <description>REGISTRATION_GATE_APPROVER_ID</description>
        <externalDeveloperName>REGISTRATION_GATE_APPROVER_ID</externalDeveloperName>
        <label>REGISTRATION_GATE_APPROVER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_APPROVER__c</fullName>
        <description>REGISTRATION_GATE_APPROVER</description>
        <externalDeveloperName>REGISTRATION_GATE_APPROVER</externalDeveloperName>
        <label>REGISTRATION_GATE_APPROVER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_COMMENTS__c</fullName>
        <description>REGISTRATION_GATE_COMMENTS</description>
        <externalDeveloperName>REGISTRATION_GATE_COMMENTS</externalDeveloperName>
        <label>REGISTRATION_GATE_COMMENTS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_DATE__c</fullName>
        <description>REGISTRATION_GATE_DATE</description>
        <externalDeveloperName>REGISTRATION_GATE_DATE</externalDeveloperName>
        <label>REGISTRATION_GATE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_PASSED_WF__c</fullName>
        <description>REGISTRATION_GATE_PASSED_WF</description>
        <externalDeveloperName>REGISTRATION_GATE_PASSED_WF</externalDeveloperName>
        <label>REGISTRATION_GATE_PASSED_WF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGISTRATION_GATE_PASSED__c</fullName>
        <description>REGISTRATION_GATE_PASSED</description>
        <externalDeveloperName>REGISTRATION_GATE_PASSED</externalDeveloperName>
        <label>REGISTRATION_GATE_PASSED</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RELATED_WORK_ITEMS__c</fullName>
        <description>RELATED_WORK_ITEMS</description>
        <externalDeveloperName>RELATED_WORK_ITEMS</externalDeveloperName>
        <label>RELATED_WORK_ITEMS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTOR_ID__c</fullName>
        <description>REQUESTOR_ID</description>
        <externalDeveloperName>REQUESTOR_ID</externalDeveloperName>
        <label>REQUESTOR_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTOR__c</fullName>
        <description>REQUESTOR</description>
        <externalDeveloperName>REQUESTOR</externalDeveloperName>
        <label>REQUESTOR</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RISK_COMMENT__c</fullName>
        <description>RISK_COMMENT</description>
        <externalDeveloperName>RISK_COMMENT</externalDeveloperName>
        <label>RISK_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SANCTION_GATE_CHK__c</fullName>
        <description>SANCTION_GATE_CHK</description>
        <externalDeveloperName>SANCTION_GATE_CHK</externalDeveloperName>
        <label>SANCTION_GATE_CHK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCOPE_COMMENT__c</fullName>
        <description>SCOPE_COMMENT</description>
        <externalDeveloperName>SCOPE_COMMENT</externalDeveloperName>
        <label>SCOPE_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHORT_DESCRIPTION__c</fullName>
        <description>SHORT_DESCRIPTION</description>
        <externalDeveloperName>SHORT_DESCRIPTION</externalDeveloperName>
        <label>SHORT_DESCRIPTION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>